// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RippleStoryshots Organisms/CampaignSecondary With image 1`] = `
<div
  class="rpl-campaign-secondary"
>
  <div
    class="rpl-campaign-secondary__row"
  >
    <div
      class="rpl-campaign-secondary__left"
    >
      <div
        class="rpl-campaign-secondary__content"
      >
        <img
          alt=""
          class="rpl-responsive-image rpl-campaign-secondary__image"
          height="340"
          src="https://placehold.it/580x340"
          style="object-position: 50.00% 50.00%; font-family: 'object-fit: cover; object-position: 50.00% 50.00%;';"
          width="580"
        />
         
        <!---->
      </div>
    </div>
     
    <div
      class="rpl-campaign-secondary__right"
    >
      <div
        class="rpl-campaign-secondary__content"
      >
        <h2
          class="rpl-campaign-secondary__title"
        >
          Secondary campaign headline
        </h2>
         
        <div
          class="rpl-campaign-secondary__summary"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod temporar incident  incididunt ut labore et dolore magna aliqua. Ut enim ad minim niam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.
        </div>
      </div>
       
      <a
        class="rpl-link rpl-button rpl-button--primary"
        data-print-url="#"
        href="#"
      >
        <span
          class="rpl-link__inner"
        >
          Call to action
        </span>
      </a>
    </div>
  </div>
</div>
`;

exports[`RippleStoryshots Organisms/CampaignSecondary With video 1`] = `
<div
  class="rpl-campaign-secondary"
>
  <div
    class="rpl-campaign-secondary__row"
  >
    <div
      class="rpl-campaign-secondary__left"
    >
      <div
        class="rpl-campaign-secondary__content"
      >
        <!---->
         
        <div
          class="rpl-embedded-video rpl-campaign-secondary__video"
        >
          <div
            class="rpl-embedded-video-iframe-container"
          >
            <iframe
              allowfullscreen="allowfullscreen"
              class="rpl-embedded-video-frame"
              src="https://www.youtube.com/embed/bSlnfyGTiss"
            />
          </div>
           
          <div
            class="rpl-embed-video__link"
          >
            <svg
              aria-hidden="true"
              class="rpl-icon rpl-icon--view rpl-icon--color_primary"
              overflow="visible"
              style="width: 15px; height: 11px;"
              viewBox="0 0 15 11"
            >
              <path
                d="M7.5,0 C4.09090909,0 1.17954545,2.19529412 0,5.29411765 C1.17954545,8.39294118 4.09090909,10.5882353 7.5,10.5882353 C10.9090909,10.5882353 13.8204545,8.39294118 15,5.29411765 C13.8204545,2.19529412 10.9090909,0 7.5,0 L7.5,0 Z M7.5,8.82352941 C5.61818182,8.82352941 4.09090909,7.24235294 4.09090909,5.29411765 C4.09090909,3.34588235 5.61818182,1.76470588 7.5,1.76470588 C9.38181818,1.76470588 10.9090909,3.34588235 10.9090909,5.29411765 C10.9090909,7.24235294 9.38181818,8.82352941 7.5,8.82352941 L7.5,8.82352941 Z M7.5,3.17647059 C6.36818182,3.17647059 5.45454545,4.12235294 5.45454545,5.29411765 C5.45454545,6.46588235 6.36818182,7.41176471 7.5,7.41176471 C8.63181818,7.41176471 9.54545455,6.46588235 9.54545455,5.29411765 C9.54545455,4.12235294 8.63181818,3.17647059 7.5,3.17647059 L7.5,3.17647059 Z"
              />
               
            </svg>
             
            <a
              class="rpl-link rpl-text-link"
              data-print-url="#"
              href="#"
            >
              <span
                class="rpl-link__inner"
              >
                <span
                  class="rpl-text-label"
                >
                  <span>
                    View transcript
                  </span>
                </span>
              </span>
            </a>
          </div>
           
          <!---->
        </div>
      </div>
    </div>
     
    <div
      class="rpl-campaign-secondary__right"
    >
      <div
        class="rpl-campaign-secondary__content"
      >
        <h2
          class="rpl-campaign-secondary__title"
        >
          Secondary campaign headline
        </h2>
         
        <div
          class="rpl-campaign-secondary__summary"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod temporar incident  incididunt ut labore et dolore magna aliqua. Ut enim ad minim niam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.
        </div>
      </div>
       
      <a
        class="rpl-link rpl-button rpl-button--primary"
        data-print-url="#"
        href="#"
      >
        <span
          class="rpl-link__inner"
        >
          Call to action
        </span>
      </a>
    </div>
  </div>
</div>
`;
